[gd_scene load_steps=23 format=2]

[ext_resource path="res://Hitboxes and Hurtboxes/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://White.shader" type="Shader" id=3]
[ext_resource path="res://Enemies/Boss.gd" type="Script" id=4]
[ext_resource path="res://Enemies/WanderController.gd" type="Script" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Bee.png" type="Texture" id=8]
[ext_resource path="res://Music and Sounds/Bee.ogg" type="AudioStream" id=9]
[ext_resource path="res://Shadows/SmallShadow.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=98]
radius = 16.0312

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=104]
animations = [ {
"frames": [ SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "Bee",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.9668
height = 5.32793

[sub_resource type="CircleShape2D" id=9]
radius = 99.4142

[sub_resource type="CircleShape2D" id=10]
radius = 2.49061

[sub_resource type="Animation" id=105]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=106]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Boss" type="KinematicBody2D"]
z_index = 2
z_as_relative = false
collision_layer = 16
collision_mask = 16
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 98 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 24 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 104 )
animation = "Bee"
frame = 3
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 10 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 8 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )

[node name="HitBox" parent="." instance=ExtResource( 1 )]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 10 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="WanderController"]
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/Start = SubResource( 105 )
anims/Stop = SubResource( 106 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_HurtBox_area_exited"]
[connection signal="invincibility_ended" from="HurtBox" to="HurtBox" method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="HurtBox" method="_on_HurtBox_invincibility_started"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HurtBox"]

[editable path="PlayerDetectionZone"]

[editable path="HitBox"]
